--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,144 @@
     <link rel="stylesheet" href="styles/style.css">
     <title>Assignment 2 </title>
 </head>
+
 <body>
-    
+    <!---------------------- Header section Start --------------->
+    <header>
+        <nav class="nav-bar">
+            <h2 class="title">G3 Architects</h2>
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Contact Us</li>
+                <li>Login</li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-info">
+                <h1>
+                    Brand New Group of Architects
+                </h1>
+                <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe hic quos nisi
+                    animi tempore ad fugiat assumenda amet maxime sapiente?</p>
+                <button class="button">Explore More</button>
+            </div>
+            <img src="images/banner.png" alt="">
+        </div>
+    </header>
+    <!---------------------- Header section end ----------------->
+    <!---------------------- main section Start ----------------->
+    <main>
+        <!---------------------- quick-list section start ----------------->
+        <section class="quick-list">
+            <div class="quick-list-team">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="quick-list-info">
+                <h1><span class="gray">Quick list</span><span class="title"> of Our</span><span class="orange">
+                        Features</span></h1>
+                <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe hic quos nisi animi tempore ad fugiat
+                    assumenda amet maxime sapiente?</p>
+                <button class="button">Explore More</button>
+            </div>
+        </section>
+        <!---------------------- quick-list section end ------------------->
+        <!---------------------- extra-list section start ----------------->
+        <section class="extra-list">
+            <div>
+                <div class="extra-list-title">
+                    <div class="vl"></div>
+                    <h1 class="title">Features you will love & enjoy</h1>
+                </div>
+                <P class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
+                    consequatur quod facere dolorem
+                    perspiciatis odit earum error necessitatibus est repellendus?</P>
+                <div class="articles">
+                    <div class="article">
+                        <h2>Dexktop & Mobile Version</h2>
+                        <P class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                            Repudiandae consequatur quod facere
+                            dolorem perspiciatis odit earum error necessitatibus est repellendus?</P>
+                    </div>
+                    <div class="article">
+                        <h2>Drag & Drop Builder</h2>
+                        <P class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                            Repudiandae consequatur quod facere
+                            dolorem perspiciatis odit earum error necessitatibus est repellendus?</P>
+                    </div>
+                    <div class="article">
+                        <h2>Awesome Modern Design</h2>
+                        <P class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                            Repudiandae consequatur quod facere
+                            dolorem perspiciatis odit earum error necessitatibus est repellendus?</P>
+                    </div>
+                    <div class="article">
+                        <h2>Super Easy to Edit</h2>
+                        <P class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                            Repudiandae consequatur quod facere
+                            dolorem perspiciatis odit earum error necessitatibus est repellendus?</P>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <img src="images/architect.png" alt="">
+                <button>10+year experience</button>
+            </div>
+        </section>
+        <!---------------------- extra-list section end ------------------->
+        <!---------------------- some-facts section start ----------------->
+        <section class="some-facts">
+            <h1 class="title">Some Facts</h1>
+            <P class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae consequatur quod fandus?</P>
+            <div class="some-facts-icon">
+                <div class="icon">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h2>54</h2>
+                    <p>Award Winnings</p>
+                </div>
+                <div class="icon">
+                    <img src="images/icons/projects.png" alt="">
+                    <h2>1458</h2>
+                    <p>Projects Finished</p>
+                </div>
+                <div class="icon">
+                    <img src="images/icons/customers.png" alt="">
+                    <h2>590</h2>
+                    <p>Clients Worked</p>
+                </div>
+                <div class="icon">
+                    <img src="images/icons/email.png" alt="">
+                    <h2>22546</h2>
+                    <p>Email Send</p>
+                </div>
+            </div>
+        </section>
+        <!---------------------- some-facts section end ------------------>
+        <!---------------------- sponsors section start ------------------>
+        <section class="sponsors">
+            <div class="sponsors-info">
+                <h1 class="title">Our Sponspors</h1>
+            <P class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae consequatur quod fandus?</P>
+            </div>
+            <div class="sponsors-logo">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+        </section>
+        <!---------------------- sponsors section end -------------------->
+    </main>
+    <!---------------------- main section end ----------------->
+    <!---------------------- footer section Start ------------->
+    <footer>
+        <p>All rights reserved copyright@2023 startup landing page design</p>
+    </footer>
+    <!---------------------- footer section end --------------->
 </body>
+
 </html>
