--- a/index.html
+++ b/index.html
@@ -14,21 +14,29 @@
     <header>
         <nav class="nav-bar">
             <h2 class="title">G3 Architects</h2>
-            <ul>
-                <li>Home</li>
-                <li>About</li>
-                <li>Contact Us</li>
-                <li>Login</li>
+            <ul class="menu">
+                <a href="">
+                    <li>Home</li>
+                </a>
+                <a href="">
+                    <li>About</li>
+                </a>
+                <a href="">
+                    <li>Contact Us</li>
+                </a>
+                <a href="">
+                    <li>Login</li>
+                </a>
             </ul>
         </nav>
         <div class="banner">
             <div class="banner-info">
                 <h1>
-                    Brand New Group of Architects
+                    Brand New <br> Group of Architects
                 </h1>
                 <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe hic quos nisi
                     animi tempore ad fugiat assumenda amet maxime sapiente?</p>
-                <button class="button">Explore More</button>
+                <button type="button" class="primary-button">Explore More</button>
             </div>
             <img src="images/banner.png" alt="">
         </div>
@@ -47,9 +55,10 @@
             <div class="quick-list-info">
                 <h1><span class="gray">Quick list</span><span class="title"> of Our</span><span class="orange">
                         Features</span></h1>
-                <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe hic quos nisi animi tempore ad fugiat
+                <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe hic quos nisi
+                    animi tempore ad fugiat
                     assumenda amet maxime sapiente?</p>
-                <button class="button">Explore More</button>
+                <button type="button" class="primary-button">Explore More</button>
             </div>
         </section>
         <!---------------------- quick-list section end ------------------->
@@ -90,16 +99,21 @@
                     </div>
                 </div>
             </div>
-            <div>
+            <div class="architect">
                 <img src="images/architect.png" alt="">
-                <button>10+year experience</button>
+                <button type="button" class="primary-button">
+                    <h1>10+year</h1>Experience
+                </button>
             </div>
         </section>
         <!---------------------- extra-list section end ------------------->
         <!---------------------- some-facts section start ----------------->
         <section class="some-facts">
-            <h1 class="title">Some Facts</h1>
-            <P class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae consequatur quod fandus?</P>
+            <div class="some-facts-info">
+                <h1 class="title">Some Facts</h1>
+                <P class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae consequatur
+                    quod fandus?</P>
+            </div>
             <div class="some-facts-icon">
                 <div class="icon">
                     <img src="images/icons/ribon.png" alt="">
@@ -126,9 +140,12 @@
         <!---------------------- some-facts section end ------------------>
         <!---------------------- sponsors section start ------------------>
         <section class="sponsors">
-            <div class="sponsors-info">
-                <h1 class="title">Our Sponspors</h1>
-            <P class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae consequatur quod fandus?</P>
+            <div class="sponsors-info-container">
+                <div class="sponsors-info">
+                    <h1 class="title">Our Sponspors</h1>
+                    <P class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae consequatur
+                        quod fandus?</P>
+                </div>
             </div>
             <div class="sponsors-logo">
                 <img src="images/sponsors/spotify.png" alt="">
