--- a/index.html
+++ b/index.html
@@ -31,11 +31,9 @@
         </nav>
         <div class="banner">
             <div class="banner-info">
-                <h1>
-                    Brand New <br> Group of Architects
-                </h1>
-                <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe hic quos nisi
-                    animi tempore ad fugiat assumenda amet maxime sapiente?</p>
+                <h1>Brand New <br> Group of Architects</h1>
+                <p class="description">Starting a new business or introducing a new product? We are launch specialists.
+                    We define your audience, craft your message, design your identity and bring it to life.</p>
                 <button type="button" class="primary-button">Explore More</button>
             </div>
             <img src="images/banner.png" alt="">
@@ -55,9 +53,7 @@
             <div class="quick-list-info">
                 <h1><span class="gray">Quick list</span><span class="title"> of Our</span><span class="orange">
                         Features</span></h1>
-                <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe hic quos nisi
-                    animi tempore ad fugiat
-                    assumenda amet maxime sapiente?</p>
+                <p class="description">Features of company as per Indian companies act 1956, define a company or corporate body. A company has certain very unique features and characteristics. We also some of them.</p>
                 <button type="button" class="primary-button">Explore More</button>
             </div>
         </section>
@@ -69,33 +65,23 @@
                     <div class="vl"></div>
                     <h1 class="title">Features you will love & enjoy</h1>
                 </div>
-                <P class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
-                    consequatur quod facere dolorem
-                    perspiciatis odit earum error necessitatibus est repellendus?</P>
+                <P class="description">Let us familiarize ourselves with the features of a company, kinds of company, and Share Capital of Company.</P>
                 <div class="articles">
                     <div class="article">
-                        <h2>Dexktop & Mobile Version</h2>
-                        <P class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                            Repudiandae consequatur quod facere
-                            dolorem perspiciatis odit earum error necessitatibus est repellendus?</P>
+                        <h2>Desktop & Mobile Version</h2>
+                        <P class="description">Web developers have to test websites on specific browsers to ensure the site’s compatibility with said browser’s specifications.Our developers working day by responsively.</P>
                     </div>
                     <div class="article">
                         <h2>Drag & Drop Builder</h2>
-                        <P class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                            Repudiandae consequatur quod facere
-                            dolorem perspiciatis odit earum error necessitatibus est repellendus?</P>
+                        <P class="description">Top Drag & Drop Website Builders. Zyro: The easiest and the cheapest drag and drop builder. Squarespace: The ideal solution for modern and creative websites.</P>
                     </div>
                     <div class="article">
                         <h2>Awesome Modern Design</h2>
-                        <P class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                            Repudiandae consequatur quod facere
-                            dolorem perspiciatis odit earum error necessitatibus est repellendus?</P>
+                        <P class="description">You will find below the best Modern website designs to inspire you. If you are looking for graphic design ideas and inspirations to build your next Modern website or app, you are at the right place.</P>
                     </div>
                     <div class="article">
                         <h2>Super Easy to Edit</h2>
-                        <P class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                            Repudiandae consequatur quod facere
-                            dolorem perspiciatis odit earum error necessitatibus est repellendus?</P>
+                        <P class="description">Editable websites, or Content Management Systems (CMS) are tools that allow the client to keep their websites up to date themselves, without having to know website coding.</P>
                     </div>
                 </div>
             </div>
@@ -107,12 +93,59 @@
             </div>
         </section>
         <!---------------------- extra-list section end ------------------->
+        <!-- top engineers section start -->
+        <section class="top-engineers">
+            <h2 class="title">Top Engineers</h2>
+            <div class="engineers">
+                <div class="engineer">
+                    <img src="images/engineers/engineer-1.png" alt="">
+                    <div class="engineer-details">
+                        <h3>Jacob Henry</h3>
+                        <p class="description">University of Oxford</p>
+                    </div>
+                </div>
+                <div class="engineer">
+                    <img src="images/engineers/engineer-2.png" alt="">
+                    <div class="engineer-details">
+                        <h3>Thomas Freddie</h3>
+                        <p class="description">Harvard University</p>
+                    </div>
+                </div>
+                <div class="engineer">
+                    <img src="images/engineers/engineer-3.png" alt="">
+                    <div class="engineer-details">
+                        <h3>Alfie Theo</h3>
+                        <p class="description">Stanford University</p>
+                    </div>
+                </div>
+                <div class="engineer">
+                    <img src="images/engineers/engineer-4.png" alt="">
+                    <div class="engineer-details">
+                        <h3>Archie Joshua</h3>
+                        <p class="description">University of Cambridge</p>
+                    </div>
+                </div>
+                <div class="engineer">
+                    <img src="images/engineers/engineer-5.png" alt="">
+                    <div class="engineer-details">
+                        <h3>James Isaac</h3>
+                        <p class="description">Princeton University</p>
+                    </div>
+                </div>
+                <div class="engineer">
+                    <img src="images/engineers/engineer-6.png" alt="">
+                    <div class="engineer-details">
+                        <h3>Edward Lucas</h3>
+                        <p class="description">Yale University</p>
+                    </div>
+                </div>
+        </section>
+        <!-- top engineers section start -->
         <!---------------------- some-facts section start ----------------->
         <section class="some-facts">
             <div class="some-facts-info">
                 <h1 class="title">Some Facts</h1>
-                <P class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae consequatur
-                    quod fandus?</P>
+                <P class="description">Here is some of our achievement. This is a shortlist of winning Award, Completed Projects, Variation of client and Email sent</P>
             </div>
             <div class="some-facts-icon">
                 <div class="icon">
@@ -143,8 +176,7 @@
             <div class="sponsors-info-container">
                 <div class="sponsors-info">
                     <h1 class="title">Our Sponspors</h1>
-                    <P class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae consequatur
-                        quod fandus?</P>
+                    <P class="description">Support provided by corporations, and our alliance partners allows for the development of SCORE programs, projects, and resources.</P>
                 </div>
             </div>
             <div class="sponsors-logo">
