--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-    <!---------------------- Header section Start --------------->
+    <!-------------------------------------------------------
+        ==============Header section start===================
+        ---------------------------------------------------->
     <header>
         <nav class="nav-bar">
             <h2 class="title">G3 Architects</h2>
@@ -39,10 +41,17 @@
             <img src="images/banner.png" alt="">
         </div>
     </header>
-    <!---------------------- Header section end ----------------->
-    <!---------------------- main section Start ----------------->
+    <!-------------------------------------------------------
+        ==============Header section end=====================
+        ---------------------------------------------------->
+
+    <!-------------------------------------------------------
+        ==============main section start=====================
+        ---------------------------------------------------->
     <main>
-        <!---------------------- quick-list section start ----------------->
+        <!------------------------------------------------------
+        ==============quick list start==========================
+        -------------------------------------------------------->
         <section class="quick-list">
             <div class="quick-list-team">
                 <img src="images/team1.png" alt="">
@@ -53,35 +62,50 @@
             <div class="quick-list-info">
                 <h1><span class="gray">Quick list</span><span class="title"> of Our</span><span class="orange">
                         Features</span></h1>
-                <p class="description">Features of company as per Indian companies act 1956, define a company or corporate body. A company has certain very unique features and characteristics. We also some of them.</p>
+                <p class="description">Features of company as per Indian companies act 1956, define a company or
+                    corporate body. A company has certain very unique features and characteristics. We also some of
+                    them.</p>
                 <button type="button" class="primary-button">Explore More</button>
             </div>
         </section>
-        <!---------------------- quick-list section end ------------------->
-        <!---------------------- extra-list section start ----------------->
+        <!-------------------------------------------------------
+        ==============Quick list section end=====================
+        ---------------------------------------------------->
+
+        <!-------------------------------------------------------
+        ==============Extra list section start==================
+        ------------------------------------------------------->
         <section class="extra-list">
             <div>
                 <div class="extra-list-title">
                     <div class="vl"></div>
                     <h1 class="title">Features you will love & enjoy</h1>
                 </div>
-                <P class="description">Let us familiarize ourselves with the features of a company, kinds of company, and Share Capital of Company.</P>
+                <P class="description">Let us familiarize ourselves with the features of a company, kinds of company,
+                    and Share Capital of Company.</P>
                 <div class="articles">
                     <div class="article">
                         <h2>Desktop & Mobile Version</h2>
-                        <P class="description">Web developers have to test websites on specific browsers to ensure the site’s compatibility with said browser’s specifications.Our developers working day by responsively.</P>
+                        <P class="description">Web developers have to test websites on specific browsers to ensure the
+                            site’s compatibility with said browser’s specifications.Our developers working day by
+                            responsively.</P>
                     </div>
                     <div class="article">
                         <h2>Drag & Drop Builder</h2>
-                        <P class="description">Top Drag & Drop Website Builders. Zyro: The easiest and the cheapest drag and drop builder. Squarespace: The ideal solution for modern and creative websites.</P>
+                        <P class="description">Top Drag & Drop Website Builders. Zyro: The easiest and the cheapest drag
+                            and drop builder. Squarespace: The ideal solution for modern and creative websites.</P>
                     </div>
                     <div class="article">
                         <h2>Awesome Modern Design</h2>
-                        <P class="description">You will find below the best Modern website designs to inspire you. If you are looking for graphic design ideas and inspirations to build your next Modern website or app, you are at the right place.</P>
+                        <P class="description">You will find below the best Modern website designs to inspire you. If
+                            you are looking for graphic design ideas and inspirations to build your next Modern website
+                            or app, you are at the right place.</P>
                     </div>
                     <div class="article">
                         <h2>Super Easy to Edit</h2>
-                        <P class="description">Editable websites, or Content Management Systems (CMS) are tools that allow the client to keep their websites up to date themselves, without having to know website coding.</P>
+                        <P class="description">Editable websites, or Content Management Systems (CMS) are tools that
+                            allow the client to keep their websites up to date themselves, without having to know
+                            website coding.</P>
                     </div>
                 </div>
             </div>
@@ -92,8 +116,13 @@
                 </button>
             </div>
         </section>
-        <!---------------------- extra-list section end ------------------->
-        <!-- top engineers section start -->
+        <!-------------------------------------------------------
+        ==============extra list section end=====================
+        -------------------------------------------------------->
+
+        <!-----------------------------------------------------------
+        ==============Top engineer section start=====================
+        ----------------------------------------------------------->
         <section class="top-engineers">
             <h2 class="title">Top Engineers</h2>
             <div class="engineers">
@@ -140,12 +169,18 @@
                     </div>
                 </div>
         </section>
-        <!-- top engineers section start -->
-        <!---------------------- some-facts section start ----------------->
+        <!---------------------------------------------------------
+        ==============top engineer  section end=====================
+        ---------------------------------------------------------->
+        
+        <!-------------------------------------------------------
+        ==============some facts section start=====================
+        --------------------------------------------------------->
         <section class="some-facts">
             <div class="some-facts-info">
                 <h1 class="title">Some Facts</h1>
-                <P class="description">Here is some of our achievement. This is a shortlist of winning Award, Completed Projects, Variation of client and Email sent</P>
+                <P class="description">Here is some of our achievement. This is a shortlist of winning Award, Completed
+                    Projects, Variation of client and Email sent</P>
             </div>
             <div class="some-facts-icon">
                 <div class="icon">
@@ -170,13 +205,19 @@
                 </div>
             </div>
         </section>
-        <!---------------------- some-facts section end ------------------>
-        <!---------------------- sponsors section start ------------------>
+        <!-------------------------------------------------------
+        ==============some facts section end=====================
+        -------------------------------------------------------->
+
+        <!-------------------------------------------------------
+        ==============Sponsors section start=====================
+        --------------------------------------------------------->
         <section class="sponsors">
             <div class="sponsors-info-container">
                 <div class="sponsors-info">
                     <h1 class="title">Our Sponspors</h1>
-                    <P class="description">Support provided by corporations, and our alliance partners allows for the development of SCORE programs, projects, and resources.</P>
+                    <P class="description">Support provided by corporations, and our alliance partners allows for the
+                        development of SCORE programs, projects, and resources.</P>
                 </div>
             </div>
             <div class="sponsors-logo">
@@ -187,14 +228,23 @@
                 <img src="images/sponsors/figma.png" alt="">
             </div>
         </section>
-        <!---------------------- sponsors section end -------------------->
+        <!-------------------------------------------------------
+        ==============Sponsors section end=======================
+        -------------------------------------------------------->
     </main>
-    <!---------------------- main section end ----------------->
-    <!---------------------- footer section Start ------------->
+    <!-------------------------------------------------------
+        ==============main section end=======================
+        ---------------------------------------------------->
+
+    <!-------------------------------------------------------
+        ==============Footer section start=====================
+        ---------------------------------------------------->
     <footer>
         <p>All rights reserved copyright@2023 startup landing page design</p>
     </footer>
-    <!---------------------- footer section end --------------->
+    <!-------------------------------------------------------
+        ==============Footer section end=====================
+        ---------------------------------------------------->
 </body>
 
 </html>
