--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
         <section class="some-facts">
             <div class="some-facts-info">
                 <h1 class="title">Some Facts</h1>
-                <P class="description">Here is some of our achievement. This is a shortlist of winning Award, Completed
-                    Projects, Variation of client and Email sent</P>
+                <p class="description">Here is some of our achievement. This is a shortlist of winning Award, Completed
+                    Projects, Variation of client and Email sent</p>
             </div>
             <div class="some-facts-icon">
                 <div class="icon">
